primeros cambios juan

--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
           </li>
           <li><a href="#actividades">Actividades</a></li>
           <li><a href="services.html">Repuestos</a></li>
+          <li><a href="team.html">Pilotos</a></li>
           <li><a href="contact.html">Contactenos</a></li>
 
         </ul>
