cabios en la landin

--- a/index.html
+++ b/index.html
@@ -70,7 +70,6 @@
             </ul>
           </li>
           <li><a href="#actividades">Actividades</a></li>
-          <li><a href="services.html">Repuestos</a></li>
           <li><a href="team.html">Pilotos</a></li>
           <li><a href="contact.html">Contactenos</a></li>
 
@@ -287,17 +286,12 @@
 
           <div class="col-lg-6">
             <div class="member d-flex align-items-start">
-              <div class="pic"><img src="assets/img/team/team-1.jpg" class="img-fluid" alt=""></div>
+              <div class="pic"><img src="assets/img/team/presi.jpeg" class="img-fluid" alt=""></div>
               <div class="member-info">
-                <h4>Walter White</h4>
-                <span>Chief Executive Officer</span>
-                <p>Explicabo voluptatem mollitia et repellat</p>
-                <div class="social">
-                  <a href=""><i class="ri-twitter-fill"></i></a>
-                  <a href=""><i class="ri-facebook-fill"></i></a>
-                  <a href=""><i class="ri-instagram-fill"></i></a>
-                  <a href=""> <i class="ri-linkedin-box-fill"></i> </a>
-                </div>
+                <h4>Wellington Ernesto Cerrate Donis</h4>
+                <span></span>
+                <p>Presidente.</p>
+                
               </div>
             </div>
           </div>
@@ -306,15 +300,9 @@
             <div class="member d-flex align-items-start">
               <div class="pic"><img src="assets/img/team/team-2.jpg" class="img-fluid" alt=""></div>
               <div class="member-info">
-                <h4>Sarah Jhonson</h4>
-                <span>Product Manager</span>
-                <p>Aut maiores voluptates amet et quis</p>
-                <div class="social">
-                  <a href=""><i class="ri-twitter-fill"></i></a>
-                  <a href=""><i class="ri-facebook-fill"></i></a>
-                  <a href=""><i class="ri-instagram-fill"></i></a>
-                  <a href=""> <i class="ri-linkedin-box-fill"></i> </a>
-                </div>
+                <h4>Luis Edmundo Rodríguez <br> Segura</h4>
+                <span></span>
+                <p>Vice-precidente.</p>
               </div>
             </div>
           </div>
@@ -323,15 +311,9 @@
             <div class="member d-flex align-items-start">
               <div class="pic"><img src="assets/img/team/team-3.jpg" class="img-fluid" alt=""></div>
               <div class="member-info">
-                <h4>William Anderson</h4>
-                <span>CTO</span>
-                <p>Quisquam facilis cum velit laborum corrupti</p>
-                <div class="social">
-                  <a href=""><i class="ri-twitter-fill"></i></a>
-                  <a href=""><i class="ri-facebook-fill"></i></a>
-                  <a href=""><i class="ri-instagram-fill"></i></a>
-                  <a href=""> <i class="ri-linkedin-box-fill"></i> </a>
-                </div>
+                <h4>Angélica María Salguero<br> Zetino</h4>
+                <span></span>
+                <p>Secretaria.</p>
               </div>
             </div>
           </div>
@@ -340,15 +322,31 @@
             <div class="member d-flex align-items-start">
               <div class="pic"><img src="assets/img/team/team-4.jpg" class="img-fluid" alt=""></div>
               <div class="member-info">
-                <h4>Amanda Jepson</h4>
-                <span>Accountant</span>
-                <p>Dolorum tempora officiis odit laborum officiis</p>
-                <div class="social">
-                  <a href=""><i class="ri-twitter-fill"></i></a>
-                  <a href=""><i class="ri-facebook-fill"></i></a>
-                  <a href=""><i class="ri-instagram-fill"></i></a>
-                  <a href=""> <i class="ri-linkedin-box-fill"></i> </a>
-                </div>
+                <h4>Diliam Fanuel Taracena <br> Barrientos</h4>
+                <span></span>
+                <p>Tesorero.</p>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-6 mt-4">
+            <div class="member d-flex align-items-start">
+              <div class="pic"><img src="assets/img/team/team-4.jpg" class="img-fluid" alt=""></div>
+              <div class="member-info">
+                <h4>Elder Abisaí Taracena <br> Lémus</h4>
+                <span></span>
+                <p>Vocal 1.</p>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-6 mt-4">
+            <div class="member d-flex align-items-start">
+              <div class="pic"><img src="assets/img/team/team-4.jpg" class="img-fluid" alt=""></div>
+              <div class="member-info">
+                <h4>Juan Luis López<br> Escobar</h4>
+                <span></span>
+                <p>Vocal 2.</p>
               </div>
             </div>
           </div>
@@ -546,25 +544,41 @@
             </div>
           </div>
           <div class="col-lg-4 col-md-6 footer-links">
-            <h4>Useful Links</h4>
+            <h4>Nuestro Sitio</h4>
             <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Home</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">About us</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Services</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Terms of service</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Privacy policy</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="index.html">Inicio</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#actividades">Actividades</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="team.html">Pilotos</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="contact.html">Contactenos</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="login.html">Iniciar Sesion</a></li>
             </ul>
           </div>
 
           <div class="col-lg-4 col-md-6 footer-links">
-            <h4>Our Services</h4>
-            <ul>
+            <h4>Servicios</h4>
+            <p>
+                Horarios de nuestros servicios<br>
+                <br><br>
+                <strong>Lunes a viernes:</strong><br>6:00-19:00 horas<br>
+                <br>
+                <strong>Sabados y domingos:</strong><br> 7:00-16:00 horas<br>
+              </p>
+
+
+
+
+
+
+
+
+
+           <!-- <ul>
               <li><i class="bx bx-chevron-right"></i> <a href="#">Web Design</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="#">Web Development</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="#">Product Management</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="#">Marketing</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="#">Graphic Design</a></li>
-            </ul>
+            </ul> -->
           </div>
 
         </div>
