--- a/login.html
+++ b/login.html
@@ -153,31 +153,46 @@
             </div>
           </div>
           <div class="col-lg-4 col-md-6 footer-links">
-            <h4>Useful Links</h4>
+            <h4>Nuestro Sitio</h4>
             <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Home</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">About us</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Services</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Terms of service</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Privacy policy</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="index.html">Inicio</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="index.html#actividades">Actividades</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="team.html">Pilotos</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="contact.html">Contactenos</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="login.html">Iniciar Sesion</a></li>
             </ul>
           </div>
 
           <div class="col-lg-4 col-md-6 footer-links">
-            <h4>Our Services</h4>
-            <ul>
+            <h4>Servicios</h4>
+            <p>
+                Horarios de nuestros servicios<br>
+                <br><br>
+                <strong>Lunes a viernes:</strong><br>6:00-19:00 horas<br>
+                <br>
+                <strong>Sabados y domingos:</strong><br> 7:00-16:00 horas<br>
+              </p>
+
+
+
+
+
+
+
+
+
+           <!-- <ul>
               <li><i class="bx bx-chevron-right"></i> <a href="#">Web Design</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="#">Web Development</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="#">Product Management</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="#">Marketing</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="#">Graphic Design</a></li>
-            </ul>
+            </ul> -->
           </div>
 
         </div>
       </div>
     </div>
-
     <div class="container">
       <div class="copyright">
         &copy; Copyright <strong><span>Asotarso Chiquimulilla / 2020</span></strong>. Todos los derechos Reservados
