--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
 
           <div class="col-lg-6 mt-4">
             <div class="member d-flex align-items-start">
-              <div class="pic"><img src="assets/img/team/team-3.jpg" class="img-fluid" alt=""></div>
+              <div class="pic"><img src="assets/img/team/secre.jpeg" class="img-fluid" alt=""></div>
               <div class="member-info">
                 <h4>Angélica María Salguero<br> Zetino</h4>
                 <span></span>
