--- a/index.html
+++ b/index.html
@@ -144,25 +144,22 @@
         <div class="row content">
           <div class="col-lg-6">
             <h2>Asociasion de Taxistas del Sur Oriente</h2>
-            <h3>*BREVE DESCRIPCION DE LA ASOCIACION*</h3>
+            <h3>VALOR:</h3>
+            <p>Como valor organizacional base, compartimos el RESPETO A LAS PERSONAS y por ello encaramos nuestra política de reputación corporativa: “Queremos ser reconocidos por el excelente y cálido trato que existe entre los integrantes de la asociación y la forma en que se lo transmitimos a nuestros clientes y a la sociedad en su conjunto.”</p>
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0">
             <ul>
             <li><i class="ri-check-double-line"></i> NUESTRA MISION</li>
             <p>
-              Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-              velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-              culpa qui officia deserunt mollit anim id est laborum
+              Proporcionar el mejor servicio de transporte de pasajeros, con seguridad y calidad, asegurando la satisfacción de nuestros clientes; promoviendo la cultura de mejora continua y el desarrollo integral de nuestros colaboradores.
             </p>
               <li><i class="ri-check-double-line"></i> NUESTRA VISION</li>
               <p>
-              Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-              velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-              culpa qui officia deserunt mollit anim id est laborum
+              Ser la mejor organización transporte en el casco urbano de Chiquimulilla, privilegiando a nuestros clientes, con una administración eficiente de sus recursos, actuando siempre con responsabilidad social y ambiental, y bajo principios de calidad y vocación de servicio.
               </p>
               <li><i class="ri-check-double-line"></i>Fecha de Fundacion</li>
                <p>
-              Ullamco laboris nisi ut aliquip ex ea commodo consequat.
+              Prestamos nuestros servicios desde el año 2003.
             </ul>
           </div>
         </div>
@@ -298,7 +295,7 @@
 
           <div class="col-lg-6 mt-4 mt-lg-0">
             <div class="member d-flex align-items-start">
-              <div class="pic"><img src="assets/img/team/team-2.jpg" class="img-fluid" alt=""></div>
+              <div class="pic"><img src="assets/img/team/vice.jpeg" class="img-fluid" alt=""></div>
               <div class="member-info">
                 <h4>Luis Edmundo Rodríguez <br> Segura</h4>
                 <span></span>
@@ -320,7 +317,7 @@
 
           <div class="col-lg-6 mt-4">
             <div class="member d-flex align-items-start">
-              <div class="pic"><img src="assets/img/team/team-4.jpg" class="img-fluid" alt=""></div>
+              <div class="pic"><img src="assets/img/team/tesorero.jpeg" class="img-fluid" alt=""></div>
               <div class="member-info">
                 <h4>Diliam Fanuel Taracena <br> Barrientos</h4>
                 <span></span>
@@ -331,7 +328,7 @@
 
           <div class="col-lg-6 mt-4">
             <div class="member d-flex align-items-start">
-              <div class="pic"><img src="assets/img/team/team-4.jpg" class="img-fluid" alt=""></div>
+              <div class="pic"><img src="assets/img/team/vocal1.jpeg" class="img-fluid" alt=""></div>
               <div class="member-info">
                 <h4>Elder Abisaí Taracena <br> Lémus</h4>
                 <span></span>
@@ -342,9 +339,9 @@
 
           <div class="col-lg-6 mt-4">
             <div class="member d-flex align-items-start">
-              <div class="pic"><img src="assets/img/team/team-4.jpg" class="img-fluid" alt=""></div>
+              <div class="pic"><img src="assets/img/team/vocal2.jpeg" class="img-fluid" alt=""></div>
               <div class="member-info">
-                <h4>Juan Luis López<br> Escobar</h4>
+                <h4>Juan Luis López</h4>
                 <span></span>
                 <p>Vocal 2.</p>
               </div>
