Cambio de prueba

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
           <li class="drop-down"><a href="#">Asociacion</a>
             <ul>
-              <li><a href="#about">Sobre nosotros</a></li>
+              <li><a href="#about">Sobre Nosotros</a></li>
               <li><a href="#directiva">Directiva</a></li>
              <li><a href="testimonials.html">Reseña Historica</a></li>
              
