--- a/index.html
+++ b/index.html
@@ -384,13 +384,12 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/acti12.jpeg" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>ACTIVIDAD 1</h4>
-                <p>año*</p>
+                <h4>Desfile</h4>
+                <p></p>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/portfolio-1.jpg" data-gall="portfolioGallery" class="venobox" title="App 1"><i class="bx bx-plus"></i></a>
-                  <a href="portfolio-details.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe" class="venobox" title="Detalles Actividad"><i class="bx bx-link"></i></a>
+                  <a href="assets/img/portfolio/acti12.jpeg" data-gall="portfolioGallery" class="venobox" title="Actividad"><i class="bx bx-plus"></i></a>
                 </div>
               </div>
             </div>
@@ -398,13 +397,12 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/acti14.jpeg" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>ACTIVIDAD 2</h4>
-                <p>año*</p>
+                <h4>Reina</h4>
+                <p></p>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/portfolio-2.jpg" data-gall="portfolioGallery" class="venobox" title="Actividad"><i class="bx bx-plus"></i></a>
-                  <a href="portfolio-details.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe" class="venobox" title="Detalles Actividad"><i class="bx bx-link"></i></a>
+                  <a href="assets/img/portfolio/acti14.jpeg" data-gall="portfolioGallery" class="venobox" title="Actividad"><i class="bx bx-plus"></i></a>
                 </div>
               </div>
             </div>
@@ -412,13 +410,11 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-3.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/acti8.jpeg" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>ACTIVIDAD 3</h4>
-                <p>año*</p>
+                <h4>Desfile</h4>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/portfolio-3.jpg" data-gall="portfolioGallery" class="venobox" title="Actividad 3"><i class="bx bx-plus"></i></a>
-                  <a href="portfolio-details.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe" class="venobox" title="Detalles Actividad"><i class="bx bx-link"></i></a>
+                  <a href="assets/img/portfolio/acti8.jpeg" data-gall="portfolioGallery" class="venobox" title="Actividad 3"><i class="bx bx-plus"></i></a>
                 </div>
               </div>
             </div>
@@ -426,13 +422,11 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-4.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/acti15.jpeg" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>ACTIVIDAD 4</h4>
-                <p>año*</p>
+                <h4>Actividad Deportiva</h4>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/portfolio-4.jpg" data-gall="portfolioGallery" class="venobox" title="Actividad 4"><i class="bx bx-plus"></i></a>
-                  <a href="portfolio-details.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe" class="venobox" title="Detalles Actividad"><i class="bx bx-link"></i></a>
+                  <a href="assets/img/portfolio/acti15.jpeg" data-gall="portfolioGallery" class="venobox" title="Actividad 4"><i class="bx bx-plus"></i></a>
                 </div>
               </div>
             </div>
@@ -440,13 +434,11 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-5.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/acti9.jpeg" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Actividad 5</h4>
-                <p>año*</p>
+                <h4>Desfile</h4>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/portfolio-5.jpg" data-gall="portfolioGallery" class="venobox" title="Actividad 5"><i class="bx bx-plus"></i></a>
-                  <a href="portfolio-details.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe" class="venobox" title="Detalles Actividad"><i class="bx bx-link"></i></a>
+                  <a href="assets/img/portfolio/acti9.jpeg" data-gall="portfolioGallery" class="venobox" title="Actividad 5"><i class="bx bx-plus"></i></a>
                 </div>
               </div>
             </div>
@@ -454,13 +446,11 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-6.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/acti6.jpeg" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Actividad 6</h4>
-                <p>año*</p>
+                <h4>Desfile</h4>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/portfolio-6.jpg" data-gall="portfolioGallery" class="venobox" title="actividad 6"><i class="bx bx-plus"></i></a>
-                  <a href="portfolio-details.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe" class="venobox" title="Detalles Actividad"><i class="bx bx-link"></i></a>
+                  <a href="assets/img/portfolio/acti6.jpeg" data-gall="portfolioGallery" class="venobox" title="actividad 6"><i class="bx bx-plus"></i></a>
                 </div>
               </div>
             </div>
@@ -468,13 +458,11 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-7.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/acti1.jpeg" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Actividad 7</h4>
-                <p>año*</p>
+                <h4>Desfile</h4>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/portfolio-7.jpg" data-gall="portfolioGallery" class="venobox" title="actividad 7"><i class="bx bx-plus"></i></a>
-                  <a href="portfolio-details.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe" class="venobox" title="Detalles Actividad"><i class="bx bx-link"></i></a>
+                  <a href="assets/img/portfolio/acti1.jpeg" data-gall="portfolioGallery" class="venobox" title="actividad 7"><i class="bx bx-plus"></i></a>
                 </div>
               </div>
             </div>
@@ -482,13 +470,11 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-8.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/acti17.jpeg" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Actividad 8</h4>
-                <p>año*</p>
+                <h4>Ayuda Comunitaria</h4>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/portfolio-8.jpg" data-gall="portfolioGallery" class="venobox" title="actividad 8"><i class="bx bx-plus"></i></a>
-                  <a href="portfolio-details.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe" class="venobox" title="Detalles Actividad"><i class="bx bx-link"></i></a>
+                  <a href="assets/img/portfolio/acti17.jpeg" data-gall="portfolioGallery" class="venobox" title="actividad 8"><i class="bx bx-plus"></i></a>
                 </div>
               </div>
             </div>
@@ -496,18 +482,52 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-9.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/acti16.jpeg" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Actividad 9</h4>
-                <p>año*</p>
+                <h4>Actividad Deportiva</h4> 
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/portfolio-9.jpg" data-gall="portfolioGallery" class="venobox" title="actividad 9"><i class="bx bx-plus"></i></a>
-                  <a href="portfolio-details.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe" class="venobox" title="Detalles Actividad"><i class="bx bx-link"></i></a>
+                  <a href="assets/img/portfolio/acti16.jpeg" data-gall="portfolioGallery" class="venobox" title="actividad 9"><i class="bx bx-plus"></i></a>
                 </div>
               </div>
             </div>
           </div>
           
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/acti18.jpeg" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>Apoyando a Mamá</h4> 
+                <div class="portfolio-links">
+                  <a href="assets/img/portfolio/acti18.jpeg" data-gall="portfolioGallery" class="venobox" title="actividad 10"><i class="bx bx-plus"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/acti11.jpeg" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>Desfile</h4>
+                <div class="portfolio-links">
+                  <a href="assets/img/portfolio/acti11.jpeg" data-gall="portfolioGallery" class="venobox" title="actividad 7"><i class="bx bx-plus"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/acti3.jpeg" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>Desfile</h4>
+                <div class="portfolio-links">
+                  <a href="assets/img/portfolio/acti3.jpeg" data-gall="portfolioGallery" class="venobox" title="actividad 8"><i class="bx bx-plus"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
 
         </div>
 
