--- a/team.html
+++ b/team.html
@@ -192,7 +192,7 @@
               <li><i class="bx bx-chevron-right"></i> <a href="index.html">Inicio</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="index.html#actividades">Actividades</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="team.html">Pilotos</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="contact.html">Contactenos</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="contact.php">Contactenos</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="login.html">Iniciar Sesion</a></li>
             </ul>
           </div>
