agregar Reseña historica

--- a/testimonials.html
+++ b/testimonials.html
@@ -89,14 +89,12 @@
               <h4>Para servirle.</h4>
               <p>
                 <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                Proin iaculis purus consequat sem cure digni ssim donec porttitora entum suscipit rhoncus. Accusantium quam, ultricies eget id, aliquam eget nibh et. Maecen aliquam, risus at semper.
-                Proin iaculis purus consequat sem cure digni ssim donec porttitora entum suscipit rhoncus. Accusantium quam, ultricies eget id, aliquam eget nibh et. Maecen aliquam, risus at semper.
-                Proin iaculis purus consequat sem cure digni ssim donec porttitora entum suscipit rhoncus. Accusantium quam, ultricies eget id, aliquam eget nibh et. Maecen aliquam, risus at semper.
-                Proin iaculis purus consequat sem cure digni ssim donec porttitora entum suscipit rhoncus. Accusantium quam, ultricies eget id, aliquam eget nibh et. Maecen aliquam, risus at semper.
-                Proin iaculis purus consequat sem cure digni ssim donec porttitora entum suscipit rhoncus. Accusantium quam, ultricies eget id, aliquam eget nibh et. Maecen aliquam, risus at semper.
-                Proin iaculis purus consequat sem cure digni ssim donec porttitora entum suscipit rhoncus. Accusantium quam, ultricies eget id, aliquam eget nibh et. Maecen aliquam, risus at semper.
-                Proin iaculis purus consequat sem cure digni ssim donec porttitora entum suscipit rhoncus. Accusantium quam, ultricies eget id, aliquam eget nibh et. Maecen aliquam, risus at semper.
-                
+                Asotarso Chiquimulilla nace de una necesidad vista en nuestro pueblo a través de una persona que vivía en barrio llamado Belén, ya que el propuso prestar el servicio de taxis en Chiquimulilla.
+                 Dada la aceptación que tuvo dicho proyecto muchas mas familias optaron por comprar líneas y prestar el servicio a los chiquimulillences.
+                Al principio surgieron dos grupos para prestar servicio debido a que la municipalidad otorgaba líneas para poder circular.
+                 Cuando un grupo decide realizar una asociación para los taxistas llega a oídos de los integrantes del otro grupo y llegan a un acuerdo entre dos lideres los cuales son Mario Melgar y Raúl Vásquez,
+                 y así es como se empezaron a gestionar todos los requisitos para poder formar la asociación, el primer presidente de la asociación fue don Raúl Vásquez, y fue en el año 2003 cuando nace Asotarso Chiquimulilla.
+
                 <i class="bx bxs-quote-alt-right quote-icon-right"></i>
               </p>
             </div>
