Desarrollo Vistas SOCIOS y arreglo vistas admin

--- a/testimonials.html
+++ b/testimonials.html
@@ -50,7 +50,7 @@
 
         <ul>
           <li><a href="index.html">Inicio</a></li>
-          <li><a href="contact.html">Contactenos</a></li>
+          <li><a href="contact.php">Contactenos</a></li>
 
         </ul>
 
