vista de circulares y elemento navbar

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <ul>
               <li><a href="#about">Sobre Nosotros</a></li>
               <li><a href="#directiva">Directiva</a></li>
-             <li><a href="testimonials.html">Reseña Historica</a></li>
+
 
 
              <!-- <li class="drop-down"><a href="#">Deep Drop Down</a>
@@ -70,7 +70,8 @@
             </ul>
           </li>
           <li><a href="#actividades">Actividades</a></li>
-         <li><a href="team.html">Pilotos</a></li>
+          <li><a href="testimonials.html">Reseña Historica</a></li>
+        <!-- <li><a href="team.html">Pilotos</a></li> -->
           <li><a href="contact.php">Contactenos</a></li>
 
         </ul>
