--- a/testimonials.html
+++ b/testimonials.html
@@ -178,7 +178,7 @@
         <!-- You can delete the links only if you purchased the pro version. -->
         <!-- Licensing information: https://bootstrapmade.com/license/ -->
         <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/sailor-free-bootstrap-theme/ -->
-        Diseñado por <a href="#">SoftwareSolutions</a>
+        Diseñado por <a href="#">SoftwareSolutions / infosoftwaresolutions@gmail.com</a>
       </div>
     </div>
   </footer><!-- End Footer -->
