--- a/index.html
+++ b/index.html
@@ -488,9 +488,8 @@
             <ul>
               <li><i class="bx bx-chevron-right"></i> <a href="index.html">Inicio</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="#actividades">Actividades</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="team.html">Pilotos</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="contact.html">Contactenos</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="login.html">Iniciar Sesion</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="contact.php">Contactenos</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="login.php">Iniciar Sesion</a></li>
             </ul>
           </div>
           <div class="col-lg-4 col-md-6 footer-links">
