eliminar seccion de DIRECTIVA DE LA LANDING

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <li class="drop-down"><a href="#">Asociacion</a>
               <ul>
                 <li><a href="#about">Sobre Nosotros</a></li>
-                <li><a href="#directiva">Directiva</a></li>
+              <!--  <li><a href="#directiva">Directiva</a></li> -->
                 <!-- <li class="drop-down"><a href="#">Deep Drop Down</a>
                 <ul>
                 <li><a href="#">Deep Drop Down 1</a></li>
@@ -227,7 +227,7 @@
   </section> End Services Section -->
 
   <main id="main">
-    <!-- ======= Breadcrumbs ======= -->
+    <!-- ======= Breadcrumbs =======
     <section id="breadcrumbs" class="breadcrumbs">
       <div class="container">
         <div class="d-flex justify-content-between align-items-center">
@@ -235,8 +235,8 @@
         </div>
       </div>
     </section>
-    <!-- End Breadcrumbs -->
-    <!-- ======= SECCION DE LA DIRECTIVA ======= -->
+     End Breadcrumbs
+     ======= SECCION DE LA DIRECTIVA =======
     <section id="directiva" class="team ">
       <div class="container">
         <div class="row">
@@ -302,7 +302,7 @@
           </div>
         </div>
       </div>
-    </section><!-- End Team Section -->
+    </section> End Team Section -->
   </main><!-- End #main -->
   <!-- ======= Portfolio Section ======= -->
   <section id="actividades" class="portfolio">
